--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.19.1</version>
+<!--        <version>2.19.1</version>-->
+        <configuration>
+          <argLine>@{argLine} -more -arguments</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.jacoco</groupId>
