added userProfile integration test, added autoconfig exclusion for flyway to allow for flyway to be active with controller tests running

--- a/src/main/resources/application-qa.properties
+++ b/src/main/resources/application-qa.properties
@@ -9,3 +9,8 @@ spring.h2.console.enabled=true
 
 # Custom H2 Console URL
 spring.h2.console.path=/h2
+
+# Add color to log output
+spring.output.ansi.enabled=ALWAYS
+#
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
