set up logging for users-api, added logic for logs for sign up, log in, creating user profiles and updating user profiles, added log file

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,4 +14,4 @@ spring.datasource.password=password
 
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
-logging.file=users-api.log
+logging.file=user.log
