--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,19 @@
       <artifactId>spring-boot-starter-hateoas</artifactId>
       <version>1.2.2.RELEASE</version>
     </dependency>
+
+    <!--  Logging Dependencies  -->
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.13</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.13</version>
+    </dependency>
   </dependencies>
 
   <build>
